# n-streamer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/db/: add_episode.sql  add_episode_to_download_queue.sql  add_program.sql  add_program_to_subscriptions.sql  create_table_download_queue.sql  create_table_downloaded.sql  create_table_downloading.sql  create_table_episode.sql  create_table_program.sql  create_table_subscriptions.sql  get_current_episode.sql  get_download_queue.sql  get_episode.sql  get_episode_view.sql  remove_episode_from_download_queue.sql
src/n_streamer/: config.rs  db.rs  download.rs  error.rs  live_stream.rs  menu.rs  message.rs  mod.rs  time.rs  ui_utils.rs  update.rs  utils.rs  view.rs
src/n_streamer/program_schedule/: analyzed_program_info.rs  analyzed_schedule.rs  mod.rs  parsed_program_info.rs  parsed_schedule.rs  title.rs
src/n_streamer/settings/: exit.rs  locations.rs  mod.rs  theme.rs
