[package]
name = "n-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.14", features = ["tokio"]}
chrono = {version = "^0.4",features = ["serde"]}
chrono-tz = "^0.10"
tokio = {version = "^1.40",features = ["process","fs","macros", "rt-multi-thread"]}
iced_video_player = {git="https://github.com/jazzfool/iced_video_player.git",branch = "master"}
url = "^2.5"
directories = "6.0.0"
toml = "0.9.7"
rfd = "0.16.0"
turso = "0.3.2"
# Fixes turso on some platforms
aegis = {version = "0.9", features = ["pure-rust"]}
serde_json = "1.0.145"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]
